--- a/css/less/component.less
+++ b/css/less/component.less
@@ -324,9 +324,10 @@ textarea,input[type="text"],input[type="password"]{
      font-size:@btnfontsize;
      padding:10px 16px;
      border-radius:@btnborderradius;
-     margin:12px 24px;
+     margin:12px 16px;
      min-width: 92px;
      cursor:pointer;
+     text-align: center;
      &.blue-btn{
         background:@bluebtnbg;
         &:hover{
@@ -494,9 +495,11 @@ textarea,input[type="text"],input[type="password"]{
 }
 #current-loc{
     color:@currentloccolor;
+    font-size: 16px;
     a{
         color:inherit;
         text-decoration: none;
+        font-size: inherit;
         &:hover{
             text-decoration:underline;
             cursor:pointer;
