--- a/css/less/page.less
+++ b/css/less/page.less
@@ -383,5 +383,51 @@ main.managment{
         }
     }
 }
+//managment article edit page
+section.content-wrapper{
+    .content{
+        .row{
+            width:80%;
+            display: block;
+            max-width: 900px;
+            min-width: 768px;
+            padding: 18px 0;
+            input{
+                width:60%;
+                min-width:320px;
+                max-width:360px;
+                display: inline-block;
+            }
+            .row-name{
+                color:#333;
+                font-size: 14px;
+                padding: 8px;
+            }
+            .row-name,.tag-collect-wrapper,input{
+                float:left;
+            }
+            .tag-collect-wrapper{
+                padding-left: 12px;
+                .be-tag,.circle-btn{
+                    float:left;
+                }
+                .circle-btn{
+                    width:28px;
+                    height:28px;
+                    border-radius: 14px;
+                    border:1px solid #999;
+                    background: white;
+                    color:#666;
+                    text-align:center;
+                    cursor:pointer;
+                    margin: 4px 12px;
+                    li{
+                        line-height: 28px;
+                    }
+                }
+            }
+        }
+    }
+}
 //using quill editor to reliaze
 //edit page
